# llm-prices

./: .gitignore  BLOG_POST_DRAFT.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
docs/: index.html
docs/blog/: index.html
llm_prices/: __init__.py  calculator.py  cli.py  data.py  mcp_server.py
tests/: test_calculator.py
