[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-prices"
dynamic = ["version"]
description = "Look up and compare LLM API pricing across providers (OpenAI, Anthropic, Google, Mistral, and more)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
keywords = ["llm", "ai", "pricing", "openai", "anthropic", "cli", "tokens", "cost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.scripts]
llm-prices = "llm_prices.cli:main"
llm-prices-mcp = "llm_prices.mcp_server:main"

[project.urls]
Homepage = "https://github.com/benbencodes/llm-prices"
Repository = "https://github.com/benbencodes/llm-prices"
"Bug Tracker" = "https://github.com/benbencodes/llm-prices/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_prices*"]

[tool.setuptools.dynamic]
version = {attr = "llm_prices.__version__"}
